[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["vtluukkw <valtteri.luukkala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
